digit sequence methods, digit to sequence (positive integer)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(numeric_bases C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(numeric_bases main.c)
+add_executable(numeric_bases main.c
+        digit_sequence.c
+        digit_sequence.h)
